--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
 
         <activity android:name=".SecondActivity"/>
         <activity android:name=".MapsActivity"/>
+        <activity android:name=".ThirdActivity"/>
         <activity
             android:name=".MainActivity">
             <intent-filter>
