--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,16 +28,17 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".SecondActivity"/>
-        <activity android:name=".MapsActivity"/>
-        <activity android:name=".ThirdActivity"/>
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".SecondActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MapsActivity"/>
+        <activity android:name=".ThirdActivity"/>
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
