--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
-
-
+    implementation 'com.akexorcist:google-direction-library:1.2.1'
     implementation 'com.google.maps.android:android-maps-utils:0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
